# Evercell

./: .gitignore  README.md  build.sh
personalities/evercell/: bold-9-latin.font.txt
profiles/3510i/: profile.h
src/: Colour.h  Display.cpp  Display.h  Displayable.cpp  Displayable.h  Font.cpp  Font.h  FontManager.cpp  FontManager.h  FontPage.cpp  FontPage.h  Glyph.cpp  Glyph.h  Graphic.cpp  Graphic.h
targets/sdl2/: CMakeLists.txt  main.cpp
tools/: font-embedder  font-generator
